--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,7 +16,14 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button x:Name="TextExport" Content="Textbox exportieren" Height="46" Margin="0,84,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="215"/>
+        <Button x:Name="TextExport" Content="Textbox exportieren" Height="46" Margin="0,84,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="215">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFE3F2FF"/>
+                    <GradientStop Color="#FFAEC3D6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
         <TextBox x:Name="OutputBox" Margin="10,150,10,10" TextWrapping="Wrap" Background="#FFF7F7F7" BorderBrush="#FFAFAFAF"/>
         <TextBlock x:Name="Arrow" Height="24" Margin="0,126,102,0" TextWrapping="Wrap" Text="5" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" FontFamily="Webdings" FontSize="36" HorizontalAlignment="Right" Width="32">
             <TextBlock.RenderTransform>
